resources: update jOOQ in codegen script
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>